Add welcome page controller and update Java version to 8