@@ -19,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -47,7 +48,7 @@ public class RoleServiceImpl extends ServiceImpl<RoleMapper, Role> implements Ro
                 .collect(java.util.stream.Collectors.toList());
 
         if (roleIds.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         return roleMapper.selectBatchIds(roleIds);
